# empathySync

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING-NON-TECHNICAL.md  CONTRIBUTING.md  Dockerfile  HELP-SHAPE-THIS.md  LICENSE  MANIFESTO.md  README.md  ROADMAP.md  TESTING_CHECKLIST.md  docker-compose.yml  empathySync-repomix.md  install.sh  pyproject.toml  requirements.txt
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  security.yml
data/: wellness_data.json
docs/: api_reference.md  architecture.md  persistence.md  philosophy.md  setup.md  sync-setup.md  troubleshooting.md  usage.md
scenarios/: README.md
scenarios/classification/: llm_classifier.yaml
scenarios/config/: system_defaults.yaml
scenarios/connection_building/: first_contact.yaml  signposts.yaml
scenarios/domains/: crisis.yaml  emotional.yaml  harmful.yaml  health.yaml  logistics.yaml  money.yaml  relationships.yaml  spirituality.yaml
scenarios/emotional_markers/: high_intensity.yaml  low_intensity.yaml  medium_intensity.yaml  neutral.yaml
scenarios/emotional_weight/: task_weights.yaml
scenarios/graduation/: practical_skills.yaml
scenarios/handoff/: contextual_templates.yaml
scenarios/intents/: session_intents.yaml
scenarios/interventions/: dependency.yaml  graduation.yaml  session_boundaries.yaml  session_limits.yaml
scenarios/metrics/: success_metrics.yaml
scenarios/prompts/: check_ins.yaml  human_connection.yaml  mindfulness.yaml  styles.yaml
scenarios/responses/: acknowledgments.yaml  base_prompt.yaml  fallbacks.yaml  safe_alternatives.yaml
scenarios/transparency/: explanations.yaml
scenarios/voice/: personality.yaml
scenarios/wisdom/: prompts.yaml
scripts/: entrypoint.sh  test_classification.py
src/: app.py  cli.py
src/config/: settings.py
src/interfaces/: adapter.py  cli_adapter.py
tests/: test_cli.py  test_helpers.py  test_llm_classifier.py  test_persistence.py  test_trusted_network.py  test_wellness_guide.py  test_write_gate.py
(+26 files in other folders)
