[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "empathysync"
version = "1.4.0"
description = "A local-first AI assistant that provides full help for practical tasks while applying restraint on sensitive topics"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "empathySync Team"}
]
keywords = ["ai", "wellness", "local-first", "ollama", "mental-health", "ethics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "streamlit>=1.28.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
]

[project.urls]
Homepage = "https://github.com/Olawoyin007/empathySync"
Documentation = "https://github.com/Olawoyin007/empathySync#readme"
Repository = "https://github.com/Olawoyin007/empathySync"
Issues = "https://github.com/Olawoyin007/empathySync/issues"

[project.scripts]
empathysync = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*", "scenarios*"]

[tool.setuptools.package-data]
scenarios = ["**/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "venv/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 50

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
